refactor: adopt Stream.toList() and safe Optional resolution in product-service