@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SellerProfileService {
@@ -44,7 +43,7 @@ public class SellerProfileService {
                         product.getSalesCount(),
                         product.getRevenue()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
         return new SellerProfileDTO(sellerId, totalProducts, totalSales, totalRevenue, bestSellingProducts);
     }
